Let docker provide PID1
This removes the need to have dumb-init and allows docker-init to do
zombie process management.

--- a/.hopper/config.yml
+++ b/.hopper/config.yml
@@ -4,6 +4,8 @@ resources: &resources
   cpu: 100
   memory: 512
   essential: true
+  linuxParameters:
+    initProcessEnabled: true
 
 services:
   worker:
